--- a/perceptron/perceptron.ipynb
+++ b/perceptron/perceptron.ipynb
@@ -135,6 +135,19 @@
           }
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "DSLOZLXDEeoa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
