使用 Colaboratory 创建

--- a/perceptron/perceptron.ipynb
+++ b/perceptron/perceptron.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "tmp.ipynb",
+      "name": "perceptron.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +29,11 @@
       "metadata": {
         "id": "l5PdzxmC353t",
         "colab_type": "code",
-        "outputId": "6be26a5b-16e6-41cd-ba83-5c1b2570ba01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 573
-        }
+        },
+        "outputId": "6be26a5b-16e6-41cd-ba83-5c1b2570ba01"
       },
       "cell_type": "code",
       "source": [
@@ -108,7 +109,7 @@
         "showFigure(dataSet)\n",
         "w,b= PLA_train(dataSet,True)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
@@ -135,19 +136,6 @@
           }
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "DSLOZLXDEeoa",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
