--- a/perceptron/perceptron.ipynb
+++ b/perceptron/perceptron.ipynb
@@ -26,13 +26,14 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "Ozjc0kWAKhzD",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
+        "#参考自https://blog.csdn.net/u014556057/article/details/81289915\n",
         "import numpy as np\n",
         "import matplotlib as mpl\n",
         "import matplotlib.pyplot as plt"
@@ -41,21 +42,21 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "s-TY7p30RTqL",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "numlines表示产生的数据点数，这里是200个点"
       ]
     },
     {
+      "cell_type": "markdown",
       "metadata": {
         "id": "qXk8hNunWw9o",
         "colab_type": "text"
       },
-      "cell_type": "markdown",
       "source": [
         "为了测试该算法，这里简单模拟生成数据进行测试。假设生成的数据都是线性可分的，  \n",
         "那么只需要在坐标轴上随机生成大量的数据点，再用一条标准线进行分类。  \n",
@@ -63,12 +64,12 @@
       ]
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "Fhk5eKGiRSY4",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "def makePLAData(w,b, numlines):\n",
         "    w = np.array(w)\n",
@@ -90,12 +91,12 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "l5PdzxmC353t",
         "colab_type": "code",
         "colab": {}
       },
-      "cell_type": "code",
       "source": [
         "def showFigure(dataSet):\n",
         "    fig = plt.figure()\n",
@@ -146,16 +147,16 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
       "metadata": {
         "id": "vwWU5C3NSMVu",
         "colab_type": "code",
+        "outputId": "8f5bbb4f-6469-429d-df6b-ca7c29d4843d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        },
-        "outputId": "8f5bbb4f-6469-429d-df6b-ca7c29d4843d"
+        }
       },
-      "cell_type": "code",
       "source": [
         "#测试：\n",
         "dataSet = makePLAData([1,-2],7,200)\n",
@@ -163,7 +164,7 @@
         "w,b= PLA_train(dataSet,True)\n",
         "print('w={} \\nb={}'.format(w,b))"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
